--- a/experiments/configs/mixcem_waterbirds_complete.yaml
+++ b/experiments/configs/mixcem_waterbirds_complete.yaml
@@ -1,4 +1,5 @@
 trials: 3
+model_selection_trials: 2
 results_dir: /anfs/bigdisc/me466/mixcem_results/waterbirds_complete/
 
 model_selection_groups:
@@ -8,10 +9,12 @@ model_selection_groups:
   - ["^(DNN_).*$", "DNN (Baseline)"]
   - ["^(IntCEM_).*(_Baseline).*$", "IntCEM (Baseline)"]
   - ["^(MixCEM_).*(_Baseline).*$", "MixCEM (Baseline)"]
+  - ["^(ProbCBM_).*$", "ProbCBM (Baseline)"]
 
 
 model_selection_metrics:
   - val_acc_y_random_group_level_True_use_prior_False_int_auc
+  - val_acc_y
 
 shared_params:
   # Dataset Configuration
@@ -19,6 +22,7 @@ shared_params:
     dataset: "waterbirds"
     num_workers: 8
     batch_size: 256
+    n_classes: 2
 
     # DATASET VARIABLES
     root_dir: /anfs/bigdisc/me466/waterbirds
@@ -99,34 +103,6 @@ shared_params:
 
 
 runs:
-  - architecture: 'ProbabilisticConceptBottleneckModel'
-    run_name: "ProbCBM_class_hidden_dim_{class_hidden_dim}_hidden_dim_{hidden_dim}_cwl_{concept_loss_weight}"
-    n_samples_inference: 50
-    use_neg_concept: True
-    pred_class: True
-    init_negative_scale: 5
-    init_shift: 5
-    pretrained: True
-    hidden_dim: [16] #, 32]
-    class_hidden_dim: [32, 64] #128
-    intervention_prob: 0.5
-    gradient_clip_val: 2.0
-    max_concept_epochs: 50
-    warmup_epochs: 5
-    max_task_epochs: 20
-    vib_beta: 0.00005
-    concept_loss_weight: [1]
-    learning_rate: 0.001
-    lr_ratio: 10
-    weight_decay: 0
-    weight_loss: False
-    optimizer: adam
-    grid_variables:
-      - concept_loss_weight
-      - class_hidden_dim
-      - hidden_dim
-    grid_search_mode: exhaustive
-
   - architecture: "IntAwareConceptEmbeddingModel"
     run_name: "IntCEM_intervention_weight_{intervention_weight}_intervention_task_discount_{intervention_task_discount}_Baseline_cwl_{concept_loss_weight}"
     training_intervention_prob: 0.25
@@ -162,13 +138,26 @@ runs:
       - emb_size
     grid_search_mode: exhaustive
 
+  - architecture: 'ConceptBottleneckModel'
+    run_name: "DNN_extra_dims_{extra_dims}"
+    training_intervention_prob: 0.25
+    concept_loss_weight: 0
+    embedding_activation: "leakyrelu"
+    bool: False
+    extra_dims: [0, 50, 100]
+    sigmoidal_extra_capacity: False
+    sigmoidal_prob: False
+    grid_variables:
+      - extra_dims
+    grid_search_mode: exhaustive
+
   - architecture: 'MixingConceptEmbeddingModel'
     run_name: "MixCEM_n_extra_{n_discovered_concepts}_entr_{discovered_probs_entropy}_dis_{intervention_task_discount}_ip_{training_intervention_prob}_dip_{dyn_training_intervention_prob}_cl_{contrastive_loss_weight}_mix_{mix_ground_truth_embs}_shared_{shared_emb_generator}_emb_size_{emb_size}_ml_{intermediate_task_concept_loss}_Baseline_cwl_{concept_loss_weight}"
     training_intervention_prob: [[0.25, 0.5, 0.75, 1]]
-    emb_size: [128, 32] #1024, 512, 256, 128] #, 32]  # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    emb_size: [32, 64, 128] #[64, 512, 128, 32] #1024, 512, 256, 128] #, 32]  # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     embedding_activation: null
-    n_discovered_concepts: [0, 25] #50, 25] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    concept_loss_weight: [0.1, 1, 10] #, 10] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    n_discovered_concepts: [0, 5, 25] #50, 25] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    concept_loss_weight: [10, 1] #, 50, 0.1] #, 1, 0.1] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     contrastive_loss_weight: [0]
     mix_ground_truth_embs: True
     shared_emb_generator: [True]
@@ -177,9 +166,9 @@ runs:
     cond_discovery: False
     intermediate_task_concept_loss: [0]
     task_concept_loss: 1
-    intervention_task_discount: [1.01, 1.05] #, 1.5]
+    intervention_task_discount: [1.05] #[1.01, 1.05] #, 1.5]
     discovered_probs_entropy: 0
-    dyn_training_intervention_prob: [0.1] #, 0.25] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    dyn_training_intervention_prob: [0.1] #[0.1, 0.25] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     grid_variables:
       - concept_loss_weight
       - n_discovered_concepts
@@ -190,6 +179,34 @@ runs:
       - intervention_task_discount
       - training_intervention_prob
       - dyn_training_intervention_prob
+    grid_search_mode: exhaustive
+
+  - architecture: 'ProbabilisticConceptBottleneckModel'
+    run_name: "ProbCBM_class_hidden_dim_{class_hidden_dim}_hidden_dim_{hidden_dim}_cwl_{concept_loss_weight}"
+    n_samples_inference: 50
+    use_neg_concept: True
+    pred_class: True
+    init_negative_scale: 5
+    init_shift: 5
+    pretrained: True
+    hidden_dim: [4, 8] #, 16] # [16], 32]
+    class_hidden_dim: [16, 32] #, 64] # [32, 64] 128
+    intervention_prob: 0.5
+    gradient_clip_val: 2.0
+    max_concept_epochs: 50
+    warmup_epochs: 5
+    max_task_epochs: 20
+    vib_beta: 0.00005
+    concept_loss_weight: [1]
+    learning_rate: 0.001
+    lr_ratio: 10
+    weight_decay: 0
+    weight_loss: False
+    optimizer: adam
+    grid_variables:
+      - concept_loss_weight
+      - class_hidden_dim
+      - hidden_dim
     grid_search_mode: exhaustive
 
   - architecture: 'ConceptBottleneckModel'
