--- a/experiments/configs/mixcem_waterbirds_incomplete.yaml
+++ b/experiments/configs/mixcem_waterbirds_incomplete.yaml
@@ -1,36 +1,37 @@
 trials: 3
-results_dir: /anfs/bigdisc/me466/mixcem_results/celeba/
+model_selection_trials: 1
+results_dir: /anfs/bigdisc/me466/mixcem_results/waterbirds_incomplete/
+
 model_selection_groups:
-  - ["^(DNN).*$", "DNN (Baseline)"]
   - ["^(CBM_Sigmoid_Baseline_).*$", "Joint CBM (Baseline)"]
-  - ["^(CBM_Logit_Baseline_).*$", "Joint Logit CBM (Baseline)"]
-  - ["^(Hybrid-CBM_).*$", "Hybrid-CBM (Baseline)"]
-  - ["^(CEM).*$", "CEM (Baseline)"]
-  - ["^(IntCEM_).*$", "IntCEM (Baseline)"]
+  - ["^(Hybrid-CBM_).*(_Baseline_).*$", "Hybrid-CBM (Baseline)"]
+  - ["^(CEM_Baseline_).*$", "CEM (Baseline)"]
+  - ["^(DNN_).*$", "DNN (Baseline)"]
+  - ["^(IntCEM_).*(_Baseline).*$", "IntCEM (Baseline)"]
   - ["^(MixCEM_).*(_Baseline).*$", "MixCEM (Baseline)"]
   - ["^(ProbCBM_).*$", "ProbCBM (Baseline)"]
 
 
 model_selection_metrics:
   - val_acc_y_random_group_level_True_use_prior_False_int_auc
-  - val_acc_y
 
 shared_params:
   # Dataset Configuration
   dataset_config:
-    dataset: "celeba"
-    image_size: 64
-    num_classes: 1000
-    batch_size: 512
-    root_dir:  /anfs/bigdisc/me466/
-    use_imbalance: True
-    use_binary_vector_class: True
-    num_concepts: 6
-    label_binary_width: 1
-    label_dataset_subsample: 12
-    num_hidden_concepts: 2
-    selected_concepts: False
+    dataset: "waterbirds"
     num_workers: 8
+    batch_size: 256
+    n_classes: 2
+
+    # DATASET VARIABLES
+    root_dir: /anfs/bigdisc/me466/waterbirds
+    cub_root_dir: /homes/me466/data/CUB200/
+    use_attributes: True
+    augment_data: False
+    sampling_percent: 0.5
+    sampling_groups: True
+    test_subsampling: 1
+    weight_loss: True
 
   # Intervention Parameters
   intervention_config:
@@ -51,17 +52,17 @@ shared_params:
   # evaluation (may significantly increase experiment times)
   skip_repr_evaluation: True
 
-  top_k_accuracy: [3, 5, 10]
+  max_epochs: 150
+  top_k_accuracy: null
   save_model: True
-  max_epochs: 200
   patience: 15
   emb_size: 16
   extra_dims: 0
-  concept_loss_weight: [1]
-  learning_rate: 0.005
+  concept_loss_weight: [5]
+  learning_rate: 0.01
   weight_decay: 0.000004
-  weight_loss: False
-  c_extractor_arch: resnet34
+  weight_loss: True
+  c_extractor_arch: resnet18
   optimizer: sgd
   bool: False
   early_stopping_monitor: val_loss
@@ -70,7 +71,6 @@ shared_params:
   momentum: 0.9
   sigmoidal_prob: False
   training_intervention_prob: 0.25
-
   grid_variables:
     - concept_loss_weight
   grid_search_mode: exhaustive
@@ -85,38 +85,25 @@ shared_params:
             name: random_noise
             low_noise_level: 1
             noise_level: 0.5
-      - name: "OOD_heavy"
-        update_previous: True
-        dataset_config:
-          test_transformation_config:
-            name: random_noise
-            low_noise_level: 1
-            noise_level: 0.75
-      - name: "OOD_heavier"
-        update_previous: True
-        dataset_config:
-          test_transformation_config:
-            name: random_noise
-            low_noise_level: 1
-            noise_level: 0.95
+      # - name: "OOD_heavy"
+      #   update_previous: True
+      #   dataset_config:
+      #     test_transformation_config:
+      #       name: random_noise
+      #       low_noise_level: 1
+      #       noise_level: 0.75
+      # - name: "OOD_heavier"
+      #   update_previous: True
+      #   dataset_config:
+      #     test_transformation_config:
+      #       name: random_noise
+      #       low_noise_level: 1
+      #       noise_level: 0.95
 
 
 runs:
-  - architecture: 'ConceptEmbeddingModel'
-    run_name: "DNN"
-    sigmoidal_prob: True
-    training_intervention_prob: 0
-    concept_loss_weight: [0]
-    embedding_activation: "leakyrelu"
-
-  - architecture: 'ConceptEmbeddingModel'
-    run_name: "CEM"
-    sigmoidal_prob: True
-    training_intervention_prob: 0.25
-    embedding_activation: "leakyrelu"
-
   - architecture: "IntAwareConceptEmbeddingModel"
-    run_name: "IntCEM_intervention_weight_{intervention_weight}_intervention_task_discount_{intervention_task_discount}"
+    run_name: "IntCEM_intervention_weight_{intervention_weight}_intervention_task_discount_{intervention_task_discount}_Baseline_cwl_{concept_loss_weight}"
     training_intervention_prob: 0.25
     intervention_weight: [0.1, 1, 5]
     intervention_task_discount: [1.1, 1.5]
@@ -133,13 +120,43 @@ runs:
         - intervention_weight
     grid_search_mode: exhaustive
 
+  - architecture: 'ConceptEmbeddingModel'
+    run_name: "CEM_Baseline_cwl_{concept_loss_weight}"
+    sigmoidal_prob: True
+    training_intervention_prob: 0.25
+    embedding_activation: "leakyrelu"
+
+  - architecture: 'ConceptEmbeddingModel'
+    run_name: "DNN_emb_size_{emb_size}"
+    sigmoidal_prob: True
+    emb_size: [64, 32, 16]
+    training_intervention_prob: 0
+    concept_loss_weight: 0
+    embedding_activation: "leakyrelu"
+    grid_variables:
+      - emb_size
+    grid_search_mode: exhaustive
+
+  - architecture: 'ConceptBottleneckModel'
+    run_name: "DNN_extra_dims_{extra_dims}"
+    training_intervention_prob: 0.25
+    concept_loss_weight: 0
+    embedding_activation: "leakyrelu"
+    bool: False
+    extra_dims: [0, 50, 100]
+    sigmoidal_extra_capacity: False
+    sigmoidal_prob: False
+    grid_variables:
+      - extra_dims
+    grid_search_mode: exhaustive
+
   - architecture: 'MixingConceptEmbeddingModel'
     run_name: "MixCEM_n_extra_{n_discovered_concepts}_entr_{discovered_probs_entropy}_dis_{intervention_task_discount}_ip_{training_intervention_prob}_dip_{dyn_training_intervention_prob}_cl_{contrastive_loss_weight}_mix_{mix_ground_truth_embs}_shared_{shared_emb_generator}_emb_size_{emb_size}_ml_{intermediate_task_concept_loss}_Baseline_cwl_{concept_loss_weight}"
     training_intervention_prob: [[0.25, 0.5, 0.75, 1]]
-    emb_size: [64, 32]
+    emb_size: [32, 64, 128] #[64, 512, 128, 32] #1024, 512, 256, 128] #, 32]  # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     embedding_activation: null
-    n_discovered_concepts: [100, 50, 25]
-    concept_loss_weight: [10]
+    n_discovered_concepts: [0, 5, 25] #50, 25] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    concept_loss_weight: [10, 1] #, 50, 0.1] #, 1, 0.1] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     contrastive_loss_weight: [0]
     mix_ground_truth_embs: True
     shared_emb_generator: [True]
@@ -148,9 +165,9 @@ runs:
     cond_discovery: False
     intermediate_task_concept_loss: [0]
     task_concept_loss: 1
-    intervention_task_discount: [1.01, 1.05, 1.5] #, 1.5]
+    intervention_task_discount: [1.05] #[1.01, 1.05] #, 1.5]
     discovered_probs_entropy: 0
-    dyn_training_intervention_prob: [0.1, 0.25]
+    dyn_training_intervention_prob: [0.1] #[0.1, 0.25] # UNCOMMENT ME!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     grid_variables:
       - concept_loss_weight
       - n_discovered_concepts
@@ -163,34 +180,32 @@ runs:
       - dyn_training_intervention_prob
     grid_search_mode: exhaustive
 
-  - architecture: 'MixingConceptEmbeddingModel'
-    run_name: "MixCEM_n_extra_{n_discovered_concepts}_entr_{discovered_probs_entropy}_dis_{intervention_task_discount}_ip_{training_intervention_prob}_dip_{dyn_training_intervention_prob}_cl_{contrastive_loss_weight}_mix_{mix_ground_truth_embs}_shared_{shared_emb_generator}_emb_size_{emb_size}_ml_{intermediate_task_concept_loss}_Baseline_cwl_{concept_loss_weight}"
-    training_intervention_prob: [[0.25, 0.5, 0.75, 1]]
-    emb_size: [1024, 512, 256, 128]
-    embedding_activation: null
-    n_discovered_concepts: [0]
-    concept_loss_weight: [10, 5]
-    contrastive_loss_weight: [0]
-    mix_ground_truth_embs: True
-    shared_emb_generator: [True]
-    normalize_embs: False
-    sample_probs: False
-    cond_discovery: False
-    intermediate_task_concept_loss: [0]
-    task_concept_loss: 1
-    intervention_task_discount: [1.01, 1.05] #, 1.5]
-    discovered_probs_entropy: 0
-    dyn_training_intervention_prob: [0.1] #, 0.25]
+  - architecture: 'ProbabilisticConceptBottleneckModel'
+    run_name: "ProbCBM_class_hidden_dim_{class_hidden_dim}_hidden_dim_{hidden_dim}_cwl_{concept_loss_weight}"
+    n_samples_inference: 50
+    use_neg_concept: True
+    pred_class: True
+    init_negative_scale: 5
+    init_shift: 5
+    pretrained: True
+    hidden_dim: [4, 8] #, 16] # [16], 32]
+    class_hidden_dim: [16, 32] #, 64] # [32, 64] 128
+    intervention_prob: 0.5
+    gradient_clip_val: 2.0
+    max_concept_epochs: 50
+    warmup_epochs: 5
+    max_task_epochs: 20
+    vib_beta: 0.00005
+    concept_loss_weight: [1]
+    learning_rate: 0.001
+    lr_ratio: 10
+    weight_decay: 0
+    weight_loss: False
+    optimizer: adam
     grid_variables:
       - concept_loss_weight
-      - n_discovered_concepts
-      - contrastive_loss_weight
-      - shared_emb_generator
-      - emb_size
-      - intermediate_task_concept_loss
-      - intervention_task_discount
-      - training_intervention_prob
-      - dyn_training_intervention_prob
+      - class_hidden_dim
+      - hidden_dim
     grid_search_mode: exhaustive
 
   - architecture: 'ConceptBottleneckModel'
@@ -220,31 +235,3 @@ runs:
     extra_dims: 0
     sigmoidal_extra_capacity: False
     sigmoidal_prob: False
-
-  - architecture: 'ProbabilisticConceptBottleneckModel'
-    run_name: "ProbCBM_cwl_class_hidden_dim_{class_hidden_dim}_hidden_dim_{hidden_dim}_n_samples_inference_{n_samples_inference}_max_concept_epochs_{max_concept_epochs}_max_task_epochs_{max_task_epochs}"
-    n_samples_inference: 50
-    use_neg_concept: True
-    pred_class: True
-    init_negative_scale: 5
-    init_shift: 5
-    pretrained: True
-    hidden_dim: [16, 32]
-    class_hidden_dim: [32, 64] #128]
-    intervention_prob: 0.5
-    gradient_clip_val: 2.0
-    max_concept_epochs: 70
-    warmup_epochs: 5
-    max_task_epochs: 75
-    vib_beta: 0.00005
-    concept_loss_weight: [1]
-    learning_rate: 0.001
-    lr_ratio: 10
-    weight_decay: 0
-    weight_loss: False
-    optimizer: adam
-    grid_variables:
-      - concept_loss_weight
-      - class_hidden_dim
-      - hidden_dim
-    grid_search_mode: exhaustive
