--- a/experiments/configs/mixcem_waterbirds_incomplete_20.yaml
+++ b/experiments/configs/mixcem_waterbirds_incomplete_20.yaml
@@ -1,6 +1,6 @@
 trials: 3
 model_selection_trials: 2
-results_dir: /anfs/bigdisc/me466/mixcem_results/waterbirds_incomplete/
+results_dir: /anfs/bigdisc/me466/mixcem_results/waterbirds_incomplete_0.2/
 
 model_selection_groups:
   - ["^(CBM_Sigmoid_Baseline_).*$", "Joint CBM (Baseline)"]
@@ -29,7 +29,7 @@ shared_params:
     cub_root_dir: /homes/me466/data/CUB200/
     use_attributes: True
     augment_data: False
-    sampling_percent: 0.5
+    sampling_percent: 0.2
     sampling_groups: True
     test_subsampling: 1
     weight_loss: True
@@ -56,7 +56,8 @@ shared_params:
   max_epochs: 150
   top_k_accuracy: null
   save_model: True
-  patience: 15
+  patience: 2  # Change from 15
+  check_val_every_n_epoch: 5  # Change from default
   emb_size: 16
   extra_dims: 0
   concept_loss_weight: [5]
@@ -104,7 +105,7 @@ shared_params:
 
 runs:
   - architecture: "IntAwareConceptEmbeddingModel"
-    run_name: "IntCEM_intervention_weight_{intervention_weight}_intervention_task_discount_{intervention_task_discount}_Baseline_cwl_{concept_loss_weight}"
+    run_name: "IntCEM_emb_size_{emb_size}_intervention_weight_{intervention_weight}_intervention_task_discount_{intervention_task_discount}_Baseline_cwl_{concept_loss_weight}"
     training_intervention_prob: 0.25
     intervention_weight: [0.1, 1, 5]
     intervention_task_discount: [1.1, 1.5]
@@ -115,27 +116,23 @@ runs:
     max_horizon: 6
     horizon_rate: 1.005
     gradient_clip_val: 100
+    emb_size: [16, 128]
     grid_variables:
         - concept_loss_weight
         - intervention_task_discount
         - intervention_weight
+        - emb_size
     grid_search_mode: exhaustive
 
   - architecture: 'ConceptEmbeddingModel'
-    run_name: "CEM_Baseline_cwl_{concept_loss_weight}"
+    run_name: "CEM_emb_size_{emb_size}_Baseline_cwl_{concept_loss_weight}"
     sigmoidal_prob: True
     training_intervention_prob: 0.25
     embedding_activation: "leakyrelu"
-
-  - architecture: 'ConceptEmbeddingModel'
-    run_name: "DNN_emb_size_{emb_size}"
-    sigmoidal_prob: True
-    emb_size: [64, 32, 16]
-    training_intervention_prob: 0
-    concept_loss_weight: 0
-    embedding_activation: "leakyrelu"
+    emb_size: [16, 64, 128]
     grid_variables:
-      - emb_size
+        - concept_loss_weight
+        - emb_size
     grid_search_mode: exhaustive
 
   - architecture: 'ConceptBottleneckModel'
