--- a/experiments/configs/mixcem_waterbirds_incomplete_20.yaml
+++ b/experiments/configs/mixcem_waterbirds_incomplete_20.yaml
@@ -1,5 +1,5 @@
 trials: 3
-model_selection_trials: 2
+model_selection_trials: 3
 results_dir: /anfs/bigdisc/me466/mixcem_results/waterbirds_incomplete_0.2/
 
 model_selection_groups:
@@ -13,8 +13,8 @@ model_selection_groups:
 
 
 model_selection_metrics:
-  - val_acc_y_random_group_level_True_use_prior_False_int_auc
-  - val_acc_y
+  - val_auc_y_random_group_level_True_use_prior_False_int_auc
+  - val_auc_y
 
 shared_params:
   # Dataset Configuration
@@ -39,6 +39,7 @@ shared_params:
     competence_levels: [1]
     intervention_freq: 1
     intervention_batch_size: 256
+    use_auc: True
     val_intervention_policies:
       - policy: "random"
         group_level: True
@@ -60,7 +61,7 @@ shared_params:
   check_val_every_n_epoch: 5  # Change from default
   emb_size: 16
   extra_dims: 0
-  concept_loss_weight: [5]
+  concept_loss_weight: [1, 5, 10]
   learning_rate: 0.01
   weight_decay: 0.000004
   weight_loss: True
@@ -72,7 +73,7 @@ shared_params:
   early_stopping_delta: 0.0
   momentum: 0.9
   sigmoidal_prob: False
-  training_intervention_prob: 0.25
+  training_intervention_prob: 0
   grid_variables:
     - concept_loss_weight
   grid_search_mode: exhaustive
@@ -96,10 +97,7 @@ shared_params:
       #       noise_level: 0.75
       # - name: "OOD_heavier"
       #   update_previous: True
-      #   dataset_config:
-      #     test_transformation_config:
-      #       name: random_noise
-      #       low_noise_level: 1
+      #   dataset_config: #     test_transformation_config: #       name: random_noise #       low_noise_level: 1
       #       noise_level: 0.95
 
 
@@ -186,7 +184,7 @@ runs:
     init_negative_scale: 5
     init_shift: 5
     pretrained: True
-    hidden_dim: [4, 8] #, 16] # [16], 32]
+    hidden_dim: [4, 8, 16] #, 16] # [16], 32]
     class_hidden_dim: [16, 32] #, 64] # [32, 64] 128
     intervention_prob: 0.5
     gradient_clip_val: 2.0
@@ -208,7 +206,7 @@ runs:
 
   - architecture: 'ConceptBottleneckModel'
     run_name: "Hybrid-CBM_Sigmoid_extra_dims_{extra_dims}_Baseline_cwl_{concept_loss_weight}"
-    extra_dims: [50, 100]
+    extra_dims: [50, 100, 200]
     training_intervention_prob: 0
     embedding_activation: "leakyrelu"
     sigmoidal_prob: True
@@ -219,7 +217,7 @@ runs:
 
   - architecture: 'ConceptBottleneckModel'
     run_name: "CBM_Sigmoid_Baseline_cwl_{concept_loss_weight}"
-    training_intervention_prob: 0.25
+    training_intervention_prob: 0
     embedding_activation: "leakyrelu"
     bool: False
     extra_dims: 0
