--- a/experiments/configs/mixcem_waterbirds_incomplete_20_same_distr.yaml
+++ b/experiments/configs/mixcem_waterbirds_incomplete_20_same_distr.yaml
@@ -13,8 +13,8 @@ model_selection_groups:
 
 
 model_selection_metrics:
-  - val_acc_y_random_group_level_True_use_prior_False_int_auc
-  - val_acc_y
+  - val_auc_y_random_group_level_True_use_prior_False_int_auc
+  - val_auc_y
 
 shared_params:
   # Dataset Configuration
@@ -40,6 +40,7 @@ shared_params:
     competence_levels: [1]
     intervention_freq: 1
     intervention_batch_size: 256
+    use_auc: True
     val_intervention_policies:
       - policy: "random"
         group_level: True
@@ -61,7 +62,7 @@ shared_params:
   check_val_every_n_epoch: 5  # Change from default
   emb_size: 16
   extra_dims: 0
-  concept_loss_weight: [5]
+  concept_loss_weight: [1, 5, 10]
   learning_rate: 0.01
   weight_decay: 0.000004
   weight_loss: True
@@ -73,7 +74,7 @@ shared_params:
   early_stopping_delta: 0.0
   momentum: 0.9
   sigmoidal_prob: False
-  training_intervention_prob: 0.25
+  training_intervention_prob: 0
   grid_variables:
     - concept_loss_weight
   grid_search_mode: exhaustive
@@ -105,19 +106,6 @@ shared_params:
 
 
 runs:
-  - architecture: 'ConceptBottleneckModel'
-    run_name: "DNN_extra_dims_{extra_dims}"
-    training_intervention_prob: 0
-    concept_loss_weight: 0
-    embedding_activation: "leakyrelu"
-    bool: False
-    extra_dims: [0, 50, 100]
-    sigmoidal_extra_capacity: False
-    sigmoidal_prob: False
-    grid_variables:
-      - extra_dims
-    grid_search_mode: exhaustive
-
   - architecture: "IntAwareConceptEmbeddingModel"
     run_name: "IntCEM_emb_size_{emb_size}_intervention_weight_{intervention_weight}_intervention_task_discount_{intervention_task_discount}_Baseline_cwl_{concept_loss_weight}"
     training_intervention_prob: 0.25
@@ -149,6 +137,18 @@ runs:
         - emb_size
     grid_search_mode: exhaustive
 
+  - architecture: 'ConceptBottleneckModel'
+    run_name: "DNN_extra_dims_{extra_dims}"
+    training_intervention_prob: 0
+    concept_loss_weight: 0
+    embedding_activation: "leakyrelu"
+    bool: False
+    extra_dims: [0, 50, 100, 200]
+    sigmoidal_extra_capacity: False
+    sigmoidal_prob: False
+    grid_variables:
+      - extra_dims
+    grid_search_mode: exhaustive
 
   - architecture: 'MixingConceptEmbeddingModel'
     run_name: "MixCEM_n_extra_{n_discovered_concepts}_entr_{discovered_probs_entropy}_dis_{intervention_task_discount}_ip_{training_intervention_prob}_dip_{dyn_training_intervention_prob}_cl_{contrastive_loss_weight}_mix_{mix_ground_truth_embs}_shared_{shared_emb_generator}_emb_size_{emb_size}_ml_{intermediate_task_concept_loss}_Baseline_cwl_{concept_loss_weight}"
@@ -188,7 +188,7 @@ runs:
     init_negative_scale: 5
     init_shift: 5
     pretrained: True
-    hidden_dim: [4, 8] #, 16] # [16], 32]
+    hidden_dim: [4, 8, 16] #, 16] # [16], 32]
     class_hidden_dim: [16, 32] #, 64] # [32, 64] 128
     intervention_prob: 0.5
     gradient_clip_val: 2.0
@@ -210,7 +210,7 @@ runs:
 
   - architecture: 'ConceptBottleneckModel'
     run_name: "Hybrid-CBM_Sigmoid_extra_dims_{extra_dims}_Baseline_cwl_{concept_loss_weight}"
-    extra_dims: [50, 100]
+    extra_dims: [50, 100, 200]
     training_intervention_prob: 0
     embedding_activation: "leakyrelu"
     sigmoidal_prob: True
@@ -221,7 +221,7 @@ runs:
 
   - architecture: 'ConceptBottleneckModel'
     run_name: "CBM_Sigmoid_Baseline_cwl_{concept_loss_weight}"
-    training_intervention_prob: 0.25
+    training_intervention_prob: 0
     embedding_activation: "leakyrelu"
     bool: False
     extra_dims: 0
