--- a/experiments/configs/cub_mixcem_incomplete.yaml
+++ b/experiments/configs/cub_mixcem_incomplete.yaml
@@ -53,7 +53,7 @@ shared_params:
   patience: 15
   emb_size: 16
   extra_dims: 0
-  concept_loss_weight: [5]
+  concept_loss_weight: [1, 5, 10]
   learning_rate: 0.01
   weight_decay: 0.000004
   weight_loss: True
@@ -65,7 +65,7 @@ shared_params:
   early_stopping_delta: 0.0
   momentum: 0.9
   sigmoidal_prob: False
-  training_intervention_prob: 0.25
+  training_intervention_prob: 0
   grid_variables:
     - concept_loss_weight
   grid_search_mode: exhaustive
@@ -80,29 +80,22 @@ shared_params:
             name: random_noise
             low_noise_level: 1
             noise_level: 0.5
-      - name: "OOD_heavy"
-        update_previous: True
-        dataset_config:
-          test_transformation_config:
-            name: random_noise
-            low_noise_level: 1
-            noise_level: 0.75
-      - name: "OOD_heavier"
-        update_previous: True
-        dataset_config:
-          test_transformation_config:
-            name: random_noise
-            low_noise_level: 1
-            noise_level: 0.95
+      # - name: "OOD_heavy"
+      #   update_previous: True
+      #   dataset_config:
+      #     test_transformation_config:
+      #       name: random_noise
+      #       low_noise_level: 1
+      #       noise_level: 0.75
+      # - name: "OOD_heavier"
+      #   update_previous: True
+      #   dataset_config:
+      #     test_transformation_config:
+      #       name: random_noise
+      #       low_noise_level: 1
+      #       noise_level: 0.95
 
 runs:
-
-  - architecture: 'ConceptEmbeddingModel'
-    run_name: "DNN"
-    sigmoidal_prob: True
-    training_intervention_prob: 0
-    concept_loss_weight: [0]
-    embedding_activation: "leakyrelu"
 
   - architecture: 'ProbabilisticConceptBottleneckModel'
     run_name: "ProbCBM_cwl_class_hidden_dim_{class_hidden_dim}_hidden_dim_{hidden_dim}_n_samples_inference_{n_samples_inference}_max_concept_epochs_{max_concept_epochs}_max_task_epochs_{max_task_epochs}"
@@ -113,23 +106,42 @@ runs:
     init_shift: 5
     pretrained: True
     hidden_dim: [16, 32]
-    class_hidden_dim: [128, 256]
+    class_hidden_dim: [64, 128]
     intervention_prob: 0.5
     gradient_clip_val: 2.0
     max_concept_epochs: 70
     warmup_epochs: 5
     max_task_epochs: 75
     vib_beta: 0.00005
-    concept_loss_weight: [1]
+    concept_loss_weight: 1
     learning_rate: 0.001
     lr_ratio: 10
     weight_decay: 0
     weight_loss: False
     optimizer: adam
     grid_variables:
-      - concept_loss_weight
       - class_hidden_dim
       - hidden_dim
+    grid_search_mode: exhaustive
+
+  - architecture: "IntAwareConceptEmbeddingModel"
+    run_name: "IntCEM_emb_size_{emb_size}_intervention_weight_{intervention_weight}_intervention_task_discount_{intervention_task_discount}_Baseline_cwl_{concept_loss_weight}"
+    training_intervention_prob: 0.25
+    intervention_weight: [0.1, 1] #, 5]
+    intervention_task_discount: [1.1, 1.5]
+    use_concept_groups: True
+    int_model_use_bn: True
+    int_model_layers: [128, 128, 64, 64]
+    embedding_activation: "leakyrelu"
+    max_horizon: 6
+    horizon_rate: 1.005
+    gradient_clip_val: 100
+    emb_size: [16, 32]
+    grid_variables:
+        - concept_loss_weight
+        - intervention_task_discount
+        - intervention_weight
+        - emb_size
     grid_search_mode: exhaustive
 
   - architecture: 'ConceptEmbeddingModel'
@@ -137,6 +149,16 @@ runs:
     sigmoidal_prob: True
     training_intervention_prob: 0.25
     embedding_activation: "leakyrelu"
+
+  - architecture: 'ConceptBottleneckModel'
+    run_name: "DNN_extra_dims_{extra_dims}"
+    extra_dims: [0, 50, 100, 200]
+    training_intervention_prob: 0
+    embedding_activation: "leakyrelu"
+    sigmoidal_prob: True
+    grid_variables:
+      - extra_dims
+    grid_search_mode: exhaustive
 
   - architecture: 'MixingConceptEmbeddingModel'
     run_name: "MixCEM_n_extra_{n_discovered_concepts}_entr_{discovered_probs_entropy}_dis_{intervention_task_discount}_ip_{training_intervention_prob}_dip_{dyn_training_intervention_prob}_cl_{contrastive_loss_weight}_mix_{mix_ground_truth_embs}_shared_{shared_emb_generator}_emb_size_{emb_size}_ml_{intermediate_task_concept_loss}_Baseline_cwl_{concept_loss_weight}"
@@ -200,7 +222,7 @@ runs:
 
   - architecture: 'ConceptBottleneckModel'
     run_name: "Hybrid-CBM_Sigmoid_extra_dims_{extra_dims}_Baseline_cwl_{concept_loss_weight}"
-    extra_dims: [50, 100]
+    extra_dims: [50, 100, 200]
     training_intervention_prob: 0
     embedding_activation: "leakyrelu"
     sigmoidal_prob: True
@@ -209,27 +231,9 @@ runs:
       - extra_dims
     grid_search_mode: exhaustive
 
-  - architecture: "IntAwareConceptEmbeddingModel"
-    run_name: "IntCEM_intervention_weight_{intervention_weight}_intervention_task_discount_{intervention_task_discount}_Baseline_cwl_{concept_loss_weight}"
-    training_intervention_prob: 0.25
-    intervention_weight: [0.1, 1, 5]
-    intervention_task_discount: [1.1, 1.5]
-    use_concept_groups: True
-    int_model_use_bn: True
-    int_model_layers: [128, 128, 64, 64]
-    embedding_activation: "leakyrelu"
-    max_horizon: 6
-    horizon_rate: 1.005
-    gradient_clip_val: 100
-    grid_variables:
-        - concept_loss_weight
-        - intervention_task_discount
-        - intervention_weight
-    grid_search_mode: exhaustive
-
   - architecture: 'ConceptBottleneckModel'
     run_name: "CBM_Sigmoid_Baseline_cwl_{concept_loss_weight}"
-    training_intervention_prob: 0.25
+    training_intervention_prob: 0
     embedding_activation: "leakyrelu"
     bool: False
     extra_dims: 0
