--- a/experiments/configs/color_mnist_count_complete.yaml
+++ b/experiments/configs/color_mnist_count_complete.yaml
@@ -7,24 +7,24 @@ model_selection_groups:
   - ["^(CBM_Sigmoid_Noisy_Count_Baseline_).*$", "Joint CBM (Baseline)"]
   - ["^(CBM_Sigmoid_Noisy_Count_Downstream_Spurious_).*$", "Joint CBM (Downstream Spurious)"]
   - ["^(CBM_Sigmoid_Noisy_Count_Concept_Spurious_).*$", "Joint CBM (Concept Spurious)"]
-  - ["^(CBM_Logit_Noisy_Count_Baseline_).*$", "Joint CBM (Baseline)"]
-  - ["^(CBM_Logit_Noisy_Count_Downstream_Spurious_).*$", "Joint CBM (Downstream Spurious)"]
-  - ["^(CBM_Logit_Noisy_Count_Concept_Spurious_).*$", "Joint CBM (Concept Spurious)"]
+  - ["^(CBM_Logit_Noisy_Count_Baseline_).*$", "Logit CBM (Baseline)"]
+  - ["^(CBM_Logit_Noisy_Count_Downstream_Spurious_).*$", "Logit CBM (Downstream Spurious)"]
+  - ["^(CBM_Logit_Noisy_Count_Concept_Spurious_).*$", "Logit CBM (Concept Spurious)"]
   - ["^(Hybrid-CBM_).*(_Baseline_).*$", "Hybrid-CBM (Baseline)"]
   - ["^(Hybrid-CBM_).*(_Downstream_Spurious_).*$", "Hybrid-CBM (Downstream Spurious)"]
   - ["^(Hybrid-CBM_).*(_Concept_Spurious_).*$", "Hybrid-CBM (Concept Spurious)"]
   - ["^(CEM).*(_Noisy_Count_Baseline_).*$", "CEM (Baseline)"]
   - ["^(CEM).*(_Noisy_Count_Downstream_Spurious_).*$", "CEM (Downstream Spurious)"]
   - ["^(CEM).*(_Noisy_Count_Concept_Spurious_).*$", "CEM (Concept Spurious)"]
-  - ["^(Sigmoid_CEM).*(_Noisy_Count_Baseline_).*$", "Sigmoidal CEM (Baseline)"]
-  - ["^(Sigmoid_CEM).*(_Noisy_Count_Downstream_Spurious_).*$", "Sigmoidal CEM (Downstream Spurious)"]
-  - ["^(Sigmoid_CEM).*(_Noisy_Count_Concept_Spurious_).*$", "Sigmoidal CEM (Concept Spurious)"]
   - ["^(IntCEM_).*(_Noisy_Count_Baseline).*$", "IntCEM (Baseline)"]
   - ["^(IntCEM_).*(_Noisy_Count_Concept_Spurious).*$", "IntCEM (Concept Spurious)"]
   - ["^(IntCEM_).*(_Noisy_Count_Downstream_Spurious).*$", "IntCEM (Downstream Spurious)"]
   - ["^(ResidualMixing-CEM_).*(Noisy_Count_Baseline).*$", "ResidualMixing-CEM (Baseline)"]
   - ["^(ResidualMixing-CEM_).*(Noisy_Count_Concept_Spurious).*$", "ResidualMixing-CEM (Concept Spurious)"]
   - ["^(ResidualMixing-CEM_).*(Noisy_Count_Downstream_Spurious).*$", "ResidualMixing-CEM (Downstream Spurious)"]
+  - ["^(Try_MixCEM_).*(Noisy_Count_Baseline).*$", "MixCEM (Baseline)"]
+  - ["^(Try_MixCEM_).*(Noisy_Count_Concept_Spurious).*$", "Try_MixCEM (Concept Spurious)"]
+  - ["^(Try_MixCEM_).*(Noisy_Count_Downstream_Spurious).*$", "Try_MixCEM (Downstream Spurious)"]
   - ["^(DNN_).*(Noisy_Count_Baseline).*$", "DNN (Baseline)"]
   - ["^(DNN_).*(Noisy_Count_Concept_Spurious).*$", "DNN (Concept Spurious)"]
   - ["^(DNN_).*(Noisy_Count_Downstream_Spurious).*$", "DNN (Downstream Spurious)"]
@@ -386,11 +386,6 @@ runs:
     grid_search_mode: exhaustive
 
 
-
-
-
-
-
   - architecture: 'ConceptBottleneckModel'
     run_name: "CBM_Logit_Noisy_Count_Concept_Spurious_{dataset_config[num_operands]}_cwl_{concept_loss_weight}"
     training_intervention_prob: 0
@@ -453,13 +448,320 @@ runs:
 
 
 
+
+
+
+  - architecture: 'NewMixingConceptEmbeddingModel'
+    run_name: "Try_MixCEM_ip_{training_intervention_prob}_emb_size_{emb_size}_dis_{intervention_task_discount}_sig_res_{sigmoidal_residual}_cos_{use_cosine_similarity}_pcr_{per_concept_residual}_shared_{shared_per_concept_residual}_dev_{residual_deviation}_use_cgt_{use_ground_truth_mixing_for_res}_Baseline_{dataset_config[num_operands]}_cwl_{concept_loss_weight}"
+    training_intervention_prob: [[0.25, 0.5, 0.75, 1]]
+    emb_size: [16] #, 512] #[512, 1024]
+    embedding_activation: null
+    concept_loss_weight: [10] #, 0.1]
+    normalize_embs: False
+    task_concept_loss: 1
+    intervention_task_discount: [1.5, 1.1]
+    learning_rate: 0.001
+    use_cosine_similarity: False
+    check_val_every_n_epoch: 1
+    early_stopping_best_model: False
+    conditional_residual: [True] #False, True]
+    c2y_layers: [32, 16, 8]
+    residual_layers: [32, 16, 8]
+    additive_mixing: False
+    per_concept_residual: [True]
+    sigmoidal_residual: [False]
+    residual_deviation: [0] #, 2]
+    shared_per_concept_residual: [True] #, False] # CHANGE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+    residual_scale: 1
+    blackbox_warmup_epochs: 0
+
+    concept_epochs: 1
+    fix_backbone_for_concept: False
+
+    no_residual_epochs: 0
+    fix_backbone_for_no_res: False
+    fix_concept_embeddings_for_no_res: False
+
+    e2e_epochs: 100
+    fix_backbone_for_res: False
+    fix_concept_embeddings_for_res: False
+    fix_label_predictor_for_res: False
+    use_ground_truth_mixing_for_res: False
+
+    grid_variables:
+      - dataset_config.num_operands
+      - concept_loss_weight
+      - emb_size
+      - training_intervention_prob
+      - intervention_task_discount
+      - conditional_residual
+      - per_concept_residual
+      - sigmoidal_residual
+      - residual_deviation
+      - shared_per_concept_residual
+    grid_search_mode: exhaustive
+
+
+    # Dataset Configuration
+    dataset_config:
+      dataset: color_mnist_add
+      root_dir: data/
+      num_workers: 8
+      batch_size: 2048
+      num_operands: [20]
+      selected_digits: [3, 8]
+      count_labels: True
+      low_noise_level: 1
+      noise_level: 0.25
+      test_low_noise_level: 1
+      test_noise_level: 0.25
+      train_dataset_size: 5000
+      test_dataset_size: 5000
+      sampling_percent: 1
+      sampling_groups: True
+      test_subsampling: 1
+      weight_loss: False
+
+      spurious_strength: 0.1
+      color_by_label: False
+      colors: ["random_1", "random_2", "random_3", "random_4", "random_5", "random_6", "random_7", "random_8", "random_9", "random_10"]
+      digit_color_distribution:
+        0: ["spurious", null, null, null, null, null, null, null, null, null]
+        1: [null, "spurious", null, null, null, null, null, null, null, null]
+        2: [null, null, "spurious", null, null, null, null, null, null, null]
+        3: [null, null, null, "spurious", null, null, null, null, null, null]
+        4: [null, null, null, null, "spurious", null, null, null, null, null]
+        5: [null, null, null, null, null, "spurious", null, null, null, null]
+        6: [null, null, null, null, null, null, "spurious", null, null, null]
+        7: [null, null, null, null, null, null, null, "spurious", null, null]
+        8: [null, null, null, null, null, null, null, null, "spurious", null]
+        9: [null, null, null, null, null, null, null, null, null, "spurious"]
+
+      test_digit_color_distribution:
+        0: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        1: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        2: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        3: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        4: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        5: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        6: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        7: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        8: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        9: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+
+  - architecture: 'NewMixingConceptEmbeddingModel'
+    run_name: "Try_MixCEM_ip_{training_intervention_prob}_emb_size_{emb_size}_dis_{intervention_task_discount}_sig_res_{sigmoidal_residual}_cos_{use_cosine_similarity}_pcr_{per_concept_residual}_shared_{shared_per_concept_residual}_dev_{residual_deviation}_use_cgt_{use_ground_truth_mixing_for_res}_Downstream_Spurious_{dataset_config[num_operands]}_cwl_{concept_loss_weight}"
+    training_intervention_prob: [[0.25, 0.5, 0.75, 1]]
+    emb_size: [16] #, 512] #[512, 1024]
+    embedding_activation: null
+    concept_loss_weight: [10] #, 0.1]
+    normalize_embs: False
+    task_concept_loss: 1
+    intervention_task_discount: [1.5, 1.1]
+    learning_rate: 0.001
+    use_cosine_similarity: False
+    check_val_every_n_epoch: 1
+    early_stopping_best_model: False
+    conditional_residual: [True] #False, True]
+    c2y_layers: [32, 16, 8]
+    residual_layers: [32, 16, 8]
+    additive_mixing: False
+    per_concept_residual: [True]
+    sigmoidal_residual: [False]
+    residual_deviation: [0] #, 2]
+    shared_per_concept_residual: [True] #, False] # CHANGE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+    residual_scale: 1
+    blackbox_warmup_epochs: 0
+
+    concept_epochs: 1
+    fix_backbone_for_concept: False
+
+    no_residual_epochs: 0
+    fix_backbone_for_no_res: False
+    fix_concept_embeddings_for_no_res: False
+
+    e2e_epochs: 100
+    fix_backbone_for_res: False
+    fix_concept_embeddings_for_res: False
+    fix_label_predictor_for_res: False
+    use_ground_truth_mixing_for_res: False
+
+    grid_variables:
+      - dataset_config.num_operands
+      - concept_loss_weight
+      - emb_size
+      - training_intervention_prob
+      - intervention_task_discount
+      - conditional_residual
+      - per_concept_residual
+      - sigmoidal_residual
+      - residual_deviation
+      - shared_per_concept_residual
+    grid_search_mode: exhaustive
+
+    # Dataset Configuration
+    dataset_config:
+      dataset: color_mnist_add
+      root_dir: data/
+      num_workers: 8
+      batch_size: 2048
+      num_operands: [20]
+      selected_digits: [3, 8]
+      count_labels: True
+      low_noise_level: 1
+      noise_level: 0.25
+      test_low_noise_level: 1
+      test_noise_level: 0.25
+      train_dataset_size: 5000
+      test_dataset_size: 5000
+      sampling_percent: 1
+      sampling_groups: True
+      test_subsampling: 1
+      weight_loss: False
+
+      spurious_strength: 0.95
+      color_by_label: True    # So that the spurious correlation is label-based!
+      colors: ["random_1", "random_2", "random_3", "random_4", "random_5", "random_6", "random_7", "random_8", "random_9", "random_10"]
+      digit_color_distribution:
+        0: ["spurious", null, null, null, null, null, null, null, null, null]
+        1: [null, "spurious", null, null, null, null, null, null, null, null]
+        2: [null, null, "spurious", null, null, null, null, null, null, null]
+        3: [null, null, null, "spurious", null, null, null, null, null, null]
+        4: [null, null, null, null, "spurious", null, null, null, null, null]
+        5: [null, null, null, null, null, "spurious", null, null, null, null]
+        6: [null, null, null, null, null, null, "spurious", null, null, null]
+        7: [null, null, null, null, null, null, null, "spurious", null, null]
+        8: [null, null, null, null, null, null, null, null, "spurious", null]
+        9: [null, null, null, null, null, null, null, null, null, "spurious"]
+
+      test_digit_color_distribution:
+        0: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        1: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        2: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        3: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        4: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        5: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        6: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        7: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        8: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        9: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+
+
+  - architecture: 'NewMixingConceptEmbeddingModel'
+    run_name: "Try_MixCEM_ip_{training_intervention_prob}_emb_size_{emb_size}_dis_{intervention_task_discount}_sig_res_{sigmoidal_residual}_cos_{use_cosine_similarity}_pcr_{per_concept_residual}_shared_{shared_per_concept_residual}_dev_{residual_deviation}_use_cgt_{use_ground_truth_mixing_for_res}_Concept_Spurious_{dataset_config[num_operands]}_cwl_{concept_loss_weight}"
+    training_intervention_prob: [[0.25, 0.5, 0.75, 1]]
+    emb_size: [16] #, 512] #[512, 1024]
+    embedding_activation: null
+    concept_loss_weight: [10] #, 0.1]
+    normalize_embs: False
+    task_concept_loss: 1
+    intervention_task_discount: [1.5, 1.1]
+    learning_rate: 0.001
+    use_cosine_similarity: False
+    check_val_every_n_epoch: 1
+    early_stopping_best_model: False
+    conditional_residual: [True] #False, True]
+    c2y_layers: [32, 16, 8]
+    residual_layers: [32, 16, 8]
+    additive_mixing: False
+    per_concept_residual: [True]
+    sigmoidal_residual: [False]
+    residual_deviation: [0] #, 2]
+    shared_per_concept_residual: [True] #, False] # CHANGE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+    residual_scale: 1
+    blackbox_warmup_epochs: 0
+
+    concept_epochs: 1
+    fix_backbone_for_concept: False
+
+    no_residual_epochs: 0
+    fix_backbone_for_no_res: False
+    fix_concept_embeddings_for_no_res: False
+
+    e2e_epochs: 100
+    fix_backbone_for_res: False
+    fix_concept_embeddings_for_res: False
+    fix_label_predictor_for_res: False
+    use_ground_truth_mixing_for_res: False
+
+    grid_variables:
+      - dataset_config.num_operands
+      - concept_loss_weight
+      - emb_size
+      - training_intervention_prob
+      - intervention_task_discount
+      - conditional_residual
+      - per_concept_residual
+      - sigmoidal_residual
+      - residual_deviation
+      - shared_per_concept_residual
+    grid_search_mode: exhaustive
+
+    # Dataset Configuration
+    dataset_config:
+      dataset: color_mnist_add
+      root_dir: data/
+      num_workers: 8
+      batch_size: 2048
+      num_operands: [20]
+      selected_digits: [3, 8]
+      count_labels: True
+      low_noise_level: 1
+      noise_level: 0.25
+      test_low_noise_level: 1
+      test_noise_level: 0.25
+      train_dataset_size: 5000
+      test_dataset_size: 5000
+      sampling_percent: 1
+      sampling_groups: True
+      test_subsampling: 1
+      weight_loss: False
+
+      spurious_strength: 0.95
+      color_by_label: False    # So that the spurious correlation is concept-based!
+      colors: ["random_1", "random_2", "random_3", "random_4", "random_5", "random_6", "random_7", "random_8", "random_9", "random_10"]
+      digit_color_distribution:
+        0: ["spurious", null, null, null, null, null, null, null, null, null]
+        1: [null, "spurious", null, null, null, null, null, null, null, null]
+        2: [null, null, "spurious", null, null, null, null, null, null, null]
+        3: [null, null, null, "spurious", null, null, null, null, null, null]
+        4: [null, null, null, null, "spurious", null, null, null, null, null]
+        5: [null, null, null, null, null, "spurious", null, null, null, null]
+        6: [null, null, null, null, null, null, "spurious", null, null, null]
+        7: [null, null, null, null, null, null, null, "spurious", null, null]
+        8: [null, null, null, null, null, null, null, null, "spurious", null]
+        9: [null, null, null, null, null, null, null, null, null, "spurious"]
+
+      test_digit_color_distribution:
+        0: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        1: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        2: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        3: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        4: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        5: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        6: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        7: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        8: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+        9: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+
+
+
+
+
+
+
+
+
   - architecture: 'ConceptBottleneckModel'
     run_name: "DNN_extra_dims_{extra_dims}_sigmoidal_prob_{sigmoidal_prob}_Noisy_Count_Baseline_{dataset_config[num_operands]}"
     training_intervention_prob: 0
     embedding_activation: "leakyrelu"
     sigmoidal_prob: [False]
     concept_loss_weight: [0]
-    extra_dims: [0, 50, 100, 200]
+    extra_dims: [0, 128, 512]
     sigmoidal_extra_capacity: False
 
     # Dataset Configuration
@@ -519,9 +821,9 @@ runs:
     run_name: "DNN_extra_dims_{extra_dims}_sigmoidal_prob_{sigmoidal_prob}_Noisy_Count_Downstream_Spurious_{dataset_config[num_operands]}"
     training_intervention_prob: 0
     embedding_activation: "leakyrelu"
-    sigmoidal_prob: [True, False]
+    sigmoidal_prob: [False]
     concept_loss_weight: [0]
-    extra_dims: [160, 2560]
+    extra_dims: [0, 128, 512]
 
     # Dataset Configuration
     dataset_config:
@@ -583,7 +885,7 @@ runs:
     embedding_activation: "leakyrelu"
     sigmoidal_prob: [False]
     concept_loss_weight: [0]
-    extra_dims: [0, 50, 100, 200]
+    extra_dims: [0, 128, 512]
     sigmoidal_extra_capacity: False
 
     # Dataset Configuration
@@ -646,7 +948,7 @@ runs:
 
   - architecture: 'ConceptBottleneckModel'
     run_name: "Hybrid-CBM_extra_dims_{extra_dims}_Sigmoid_Noisy_Count_Baseline_{dataset_config[num_operands]}_cwl_{concept_loss_weight}"
-    extra_dims: [50, 100, 200]
+    extra_dims: [128, 512]
     training_intervention_prob: 0
     embedding_activation: "leakyrelu"
     sigmoidal_prob: True
@@ -707,7 +1009,7 @@ runs:
 
   - architecture: 'ConceptBottleneckModel'
     run_name: "Hybrid-CBM_extra_dims_{extra_dims}_Sigmoid_Noisy_Count_Downstream_Spurious_{dataset_config[num_operands]}_cwl_{concept_loss_weight}"
-    extra_dims: [50, 100, 200]
+    extra_dims: [128, 512]
     training_intervention_prob: 0
     embedding_activation: "leakyrelu"
     sigmoidal_prob: True
@@ -768,7 +1070,7 @@ runs:
 
   - architecture: 'ConceptBottleneckModel'
     run_name: "Hybrid-CBM_extra_dims_{extra_dims}_Sigmoid_Noisy_Count_Concept_Spurious_{dataset_config[num_operands]}_cwl_{concept_loss_weight}"
-    extra_dims: [50, 100, 200]
+    extra_dims: [128, 512]
     training_intervention_prob: 0
     embedding_activation: "leakyrelu"
     sigmoidal_prob: True
