Fixing model selection typo in color mnist.

--- a/experiments/configs/color_mnist_add_incomplete_new_test.yaml
+++ b/experiments/configs/color_mnist_add_incomplete_new_test.yaml
@@ -24,9 +24,9 @@ model_selection_groups:
   - ["^(MixCEM_).*(Noisy_Count_Baseline).*$", "MixCEM (Baseline)"]
   - ["^(MixCEM_).*(Noisy_Count_Concept_Spurious).*$", "MixCEM (Concept Spurious)"]
   - ["^(MixCEM_).*(Noisy_Count_Downstream_Spurious).*$", "MixCEM (Downstream Spurious)"]
-  - ["^(Try_MixCEM_).*(Noisy_Count_Baseline).*$", "MixCEM (Baseline)"]
-  - ["^(Try_MixCEM_).*(Noisy_Count_Concept_Spurious).*$", "Try_MixCEM (Concept Spurious)"]
-  - ["^(Try_MixCEM_).*(Noisy_Count_Downstream_Spurious).*$", "Try_MixCEM (Downstream Spurious)"]
+  - ["^(Try_MixCEM_).*(_Baseline).*$", "MixCEM (Baseline)"]
+  - ["^(Try_MixCEM_).*(_Concept_Spurious).*$", "Try_MixCEM (Concept Spurious)"]
+  - ["^(Try_MixCEM_).*(_Downstream_Spurious).*$", "Try_MixCEM (Downstream Spurious)"]
   - ["^(DNN_).*(Noisy_Count_Baseline).*$", "DNN (Baseline)"]
   - ["^(DNN_).*(Noisy_Count_Concept_Spurious).*$", "DNN (Concept Spurious)"]
   - ["^(DNN_).*(Noisy_Count_Downstream_Spurious).*$", "DNN (Downstream Spurious)"]
